--- a/README.Rmd
+++ b/README.Rmd
@@ -579,6 +579,13 @@ allp
 
 ```
 
+## Upcoming
+To be added
+
+- Plot of all pseudo-observations for a given individual
+
+
+
 # Citation 
 To cite the `recurrentpseudo` package please use the following references,
 
